--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack-validator": "^3.0.0"
   },
   "dependencies": {
+    "@fdaciuk/ajax": "^2.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
