--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fdaciuk/ajax": "^2.1.2",
+    "prop-types": "^15.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
