--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5",
     "webpack-validator": "^3.0.0"
